--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
 	</head>
 	<body>
 		<script src="rot.js"></script>
+		<script src="sprintf.js"></script>
 		<script src="game.js"></script>
 		<script src="screens.js"></script>
 		<script src="glyph.js"></script>
 		<script src="tile.js"></script>
+		<script src="builder.js"></script>		
 		<script src="map.js"></script>
 		<script src="entity.js"></script>
 		<script src="mixins.js"></script>
 		<script src="player.js"></script>
-		<script src="sprintf.js"></script>
+		
+				
+		
 	</body>
 </html>
