lots and lots..

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 		<script src="map.js"></script>
 		<script src="entity.js"></script>
 		<script src="mixins.js"></script>
+		<script src="item.js"></script>
+		<script src="repository.js"></script>		
 		<script src="player.js"></script>
+		<script src="items.js"></script>
+		
 		
 				
 		
